# Solar

./: .gitignore  Dockerfile  README.md  combined_data.csv  loading_log.txt  main.py  missing_days.csv  page_source.html  pyproject.toml  requirements.txt  test_missing_days.csv  transformation_log.txt
.astro/: config.yaml
0.EXTRACT/: Extraction.py
1.TRANSFORM/: Transformation.pyw  Transformation.spec
2.LOAD/: Loading.pyw  Loading.spec
dags/: dag_etl.py  dag_solar_etl.py
src/: config.json  extraction.py  gather_all.py  loading.py  missing.py  missing_raw.py  transformation.py  transforming.py
src/dag_modules.py/: loading_json.py  missing_json.py
src/local_modules/: extraction.py  loading.py  transformation.py
tests/: 0.Extraction.ipynb  0.Extraction_Periods.ipynb  1.Transformation.ipynb  2.Loading.ipynb  Period_selection.ipynb  converter.py  gather_all.py  loading_log.txt  main.ipynb  test_chromedriver.py  test_extraction.py  test_postgres.py  test_transformation.py  transformation_log.txt
